FIX overflow

--- a/packages/frontend/public/dark/assets/css/style.css
+++ b/packages/frontend/public/dark/assets/css/style.css
@@ -3300,7 +3300,7 @@ body.loaded {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 9;
   padding: 40px 0;
   color: #fff;
