--- a/packages/frontend/public/dark/assets/scss/components/_menu.scss
+++ b/packages/frontend/public/dark/assets/scss/components/_menu.scss
@@ -317,7 +317,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: 100vw;
 	z-index: 9;
 	padding: 40px 0;
 	color: #fff;
