--- a/packages/frontend/public/light/assets/scss/components/_menu.scss
+++ b/packages/frontend/public/light/assets/scss/components/_menu.scss
@@ -335,7 +335,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
+  width: 100vw;
 	z-index: 9;
 	padding: 25px 0;
 	color: #fff;
