--- a/packages/frontend/styles/style.css
+++ b/packages/frontend/styles/style.css
@@ -3335,7 +3335,7 @@ body.loaded {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 10;
   padding: 25px 0;
   color: #fff;
